--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ cffi==1.14.5
 chardet==4.0.0
 Django==3.2.4
 djangorestframework==3.12.4
-groups==0.1
 pathlib==1.0.1
 psycopg2==2.8.6
 pycparser==2.20
@@ -13,3 +12,5 @@ requests==2.25.1
 six==1.16.0
 sqlparse==0.4.1
 urllib3==1.26.5
+waitress==2.0.0
+whitenoise==5.2.0
