--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,21 @@ asgiref==3.3.4
 certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
+dj-database-url==0.5.0
 Django==3.2.4
+django-braces==1.14.0
+django-heroku==0.3.1
 djangorestframework==3.12.4
+groups==0.1
+gunicorn==20.1.0
+idna==2.10
+misaka==2.1.1
 pathlib==1.0.1
+Pillow==8.2.0
 psycopg2==2.8.6
 pycparser==2.20
 pytz==2021.1
+razorpay==1.2.0
 requests==2.25.1
 six==1.16.0
 sqlparse==0.4.1
